cfn-vpc.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "This template deploys VPC with a pair of public and private subnets. It deploys an Internet Gateway, with a default route on the public subnets and NAT gateway and route for private subnet.\n",
  "Parameters": {
    "VPCCIDR" : {
      "Type" : "String",
      "Description" : "Please enter the IP range (CIDR notation) for this VPC",
      "MinLength": "9",
      "MaxLength": "18",
      "Default": "10.22.0.0/16",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
    },

    "PublicSubnetCIDR" : {
      "Type" : "String",
      "Description" : "Please enter the IP address range for the VPC subnet",
      "MinLength": "9",
      "MaxLength": "18",
      "Default": "10.22.0.0/24",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
    },

    "PrivateSubnetCIDR" : {
      "Type" : "String",
      "Description" : "Please enter the IP address range for the VPC subnet",
      "MinLength": "9",
      "MaxLength": "18",
      "Default": "10.22.1.0/24",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
    }
  },

  "Resources": {
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": { "Ref" : "VPCCIDR" },
        "EnableDnsSupport": true,
        "EnableDnsHostnames": true,
        "InstanceTenancy": "default",
        "Tags": [
           { "Key" : "Name", "Value" : { "Fn::Sub": "${AWS::StackName}-VPC" } }
        ]
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          { "Key" : "Name", "Value" :  { "Fn::Sub": "${AWS::StackName}-IG" } }
        ]
      }
    },
    "GatewayToInternet": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": { "Ref": "InternetGateway" },
        "VpcId": { "Ref": "VPC" }
      }
    },
    "PublicSubnetRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [
          { "Key" : "Name", "Value" :  { "Fn::Sub": "${AWS::StackName}-public" } }
        ]
      }
    },
    "PublicSubnetRoute": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "GatewayToInternet",
      "Properties": {
        "RouteTableId": { "Ref": "PublicSubnetRouteTable" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": { "Ref": "InternetGateway" }
      }
    },
    "PublicSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "CidrBlock": { "Ref" : "PublicSubnetCIDR" },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          { "Key" : "Name", "Value" :  { "Fn::Sub": "${AWS::StackName}-public-subnet" } }
        ]
      }
    },
    "PublicSubnetRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref" : "PublicSubnetRouteTable" },
        "SubnetId": { "Ref" : "PublicSubnet" }
      }
    },
    "AZANatGatewayEIP": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": "GatewayToInternet",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "AZANatGateway": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": { "Fn::GetAtt" : [ "AZANatGatewayEIP", "AllocationId" ] },
        "SubnetId": { "Ref" : "PublicSubnet" }
      }
    },
    "PrivateSubnetRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [
          { "Key" : "Name", "Value" :  { "Fn::Sub": "${AWS::StackName}-private" } }
        ]
      }
    },
    "PrivateSubnetRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "PrivateSubnetRouteTable" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": { "Ref": "AZANatGateway" }
      }
    },
    "PrivateSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "CidrBlock": { "Ref" : "PrivateSubnetCIDR" },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          { "Key" : "Name", "Value" :  { "Fn::Sub": "${AWS::StackName}-private-subnet" } }
        ]
      }
    },
    "PrivateSubnetRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref" : "PrivateSubnetRouteTable" },
        "SubnetId": { "Ref" : "PrivateSubnet" }
      }
    }
  },
  "Outputs" : {
    "InternetGateway" : {
      "Description" : "A reference to the IG",
      "Value" :  { "Ref" : "InternetGateway" }
    },
    "VPC" : {
      "Description" : "A reference to the created VPC",
      "Value" :  { "Ref" : "VPC" }
    },
    "PublicSubnet" : {
      "Description" : "A reference to the public subnet",
      "Value" :  { "Ref" : "PublicSubnet" }
    },
    "PrivateSubnet" : {
      "Description" : "A reference to the private subnet",
      "Value" :  { "Ref" : "PrivateSubnet" }
    }
  }
}
